# rust

./: curl.rs  todo.sh
aes_gcm-example/: Cargo.toml
barycenter/: Cargo.toml
barycenter-concurrent/: Cargo.toml
borrowing/: Cargo.toml
cli-boiler-plate/: Cargo.toml
closures/: Cargo.toml
command-execution/: Cargo.toml
cross-compiling/: Makefile
crossbeam-channel/: Cargo.toml
daemon/: Cargo.toml
dir-hasher/: Cargo.toml
dir-hasher/src/: filesearch.rs  hashing.rs  lib.rs  main.rs
dynamic-dispatch/: Cargo.toml
dynamic-dispatch2/: Cargo.toml
embedded-rust/: Cargo.toml  Makefile
enums/: Cargo.toml
exec-cmd/: Cargo.toml
exif-created-date-mv/: Cargo.toml
exif-created-date-mv/src/: lib.rs  main.rs  read_exif.rs
fibonacci/: Cargo.toml
fibonacci-dynamic/: Cargo.toml
functions/: Cargo.toml
grpc-with-tonic/: Cargo.toml  Makefile
grpc-with-tonic/proto/: service.proto
grpc-with-tonic/src/: client.rs  server.rs
guess/: Cargo.toml
guessing-game/: Cargo.toml
hashmap/: Cargo.toml
hashset/: Cargo.toml
hello-world/: Cargo.toml
higher-order-functions/: Cargo.toml
homework/: PLATTE05.TXT
html-fetcher/: Cargo.toml
iterate_over_enum_variants/: Cargo.toml
iterator/: Cargo.toml
last-modified/: Cargo.toml
lifetime/: Cargo.toml
lifetime-hands-on/: Cargo.toml
linkedlist/: Cargo.toml
macro-example/: Cargo.toml
markup-language/: Cargo.toml
match-expression/: Cargo.toml
methods/: Cargo.toml
metrics-playground/: Cargo.toml  Dockerfile
ownership/: Cargo.toml
send-email/: Cargo.toml  Dockerfile
send-email/src/: main.rs
(+168 files in other folders)
