[package]
name = "exif-created-date-mv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossbeam = "0.8.2"
kamadak-exif = "0.5.5"
num_cpus = "1.15.0"
sha2 = "0.10.6"
walkdir = "2.3.2"
