[package]
name = "grpc-with-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
