[package]
name = "send-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "^0.10.3", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
] }
tokio = { version = "1", features = ["full"] }
